<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maquinas">

    <fragment
        android:id="@+id/navigation_maquinas"
        android:name="com.maquinesinsta.ui.Maquinas.MaquinasFragment"
        android:label="@string/title_maquinas"
        tools:layout="@layout/fragment_maquinas" />

    <fragment
        android:id="@+id/navigation_tmaquinas"
        android:name="com.maquinesinsta.ui.TiposMaquinas.TMaquinasFragment"
        android:label="@string/title_tmaquinas"
        tools:layout="@layout/fragment_tmaquinas" />

    <fragment
        android:id="@+id/navigation_zonas"
        android:name="com.maquinesinsta.ui.Zonas.ZonasFragment"
        android:label="@string/title_zonas"
        tools:layout="@layout/fragment_zonas" />
    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.maquinesinsta.ui.library.Maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />
</navigation>